--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0px;
-   }
+    font-family: 'Fira Sans', sans-serif;
+}
 
 .ul{
     margin: 0px;
@@ -9,7 +10,7 @@ body{
 
 .top-bar{
     height: 38px;
-    width: 1246;
+    width: 100%;
     background-image:url(../img/nav-bkg.jpg);
     text-decoration: none;
     color: #5e5e5e;
@@ -21,14 +22,10 @@ body{
     width: 80%;
     justify-content: space-between;
     padding: 10px;
-    
-
-    }
+ }
 
 .left{
     display: flex;
-    
-
 }
 
 .Language a{
@@ -41,14 +38,14 @@ body{
     text-decoration: none;
     color: #808080;
 }
+
 .welcome p{
     margin: 0px;
 }
-.right{
-    
-}
-.MyAccount a{
-    
+
+.right{}
+
+.MyAccount a{   
     text-decoration: none;
     color: #808080;
 }
@@ -68,18 +65,20 @@ body{
     padding: 30px 0px;
     margin: 0px;
 }
+
 .nav{
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .nav ul{
     padding: 0px 50px;
 }
 
 .nav ul li{
-    display: inline-block;
-    }
+    display: inline-block; 
+}
 
 .nav ul li a{
     color: #808080;;
@@ -87,7 +86,6 @@ body{
     font-size: 16px;
     text-decoration: none;
     padding: 0px 15px;
-    
 }
 
  .search{
@@ -111,8 +109,8 @@ body{
     height: 400px;
     padding: 60px ;
     width: 90%;
-   margin right: 50px;:
 }
+
 .image-container{
     margin: auto;
     width: 70%;
@@ -120,6 +118,11 @@ body{
     padding top: 70px;
     padding bottom: 140px;
     
+}
+
+.image{
+    padding-right: 90px;
+    display: flex;
 }
 
 .image-container a{
@@ -132,20 +135,66 @@ body{
 .img{
     height: 400px;
     padding: 20px 0px;
-    
-    
+}
+
+.cate-title a{
+    background: #649a58;
+    color: #ffffff;
+    padding: 15px 18px;
+    font-size: 14px;
+
+    line-height: 22px;
+    font-weight: 600;
+    letter-spacing: 0;
+    text-transform: uppercase;
+    word-wrap: break-word;
+    max-width: 45px;
+   
+
+
 }
 #top-products{
-    height: 400px;
+    width: 100%;
+    height: 130vh;
     text-align: center;
+    background-image: url('../img/producttab-bkg.png');
     
 } 
-.button a{
+
+.top-products{
+    width: 100%;
+
+}
+
+.products h1{
+    font-size: 36px;
+    margin-bottom: 45px;
+}
+
+.buttons ul{
+    display: flex;
+    display: inline-block;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
     
+}
+.button a{
     display: inline block;
     text-decoration: none;
-    color: black;
+    color: white;
+    border: 1px solid #649a58;
+    background-color: #649a58;
+    margin: 0px 10px;
+    padding: 10px 25px;
+    transition: all .5s ease ;
+    
 }
+
+.buttons a:hover{
+    background-color: #808080;
+}
+
 .row{
     height: 400px;
     display: inline-block;
@@ -153,4 +202,66 @@ body{
 }
 .col-12{
     display: inline-block;
+}
+
+.project-items{
+    width: 80%;
+    margin: 45px 0px;
+    
+}
+.project-items-row{
+    width: 100%;
+    display: flex;
+    padding: 20px 0px;
+}
+.project-item{
+
+    height: auto;
+}
+.stars{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.project-item img{}
+.project-item i{
+color: #F1AF00;
+}
+
+.project-item p{
+color: #649a58;
+}
+.project-item span{
+    
+}
+#img-slider{
+    height: auto;
+    width: 100%;
+}
+.img-slider{
+    height: 100vh;
+    width: 100%;
+   background-repeat: no-repeat;
+    background-image: url('../img/cms-banner-1.jpg');
+}
+.img-slider-content{
+    width: 40%;
+    padding: 60px 0px 60px 870px;
+    
+}
+.img-slider-content p{
+   color: white;
+   width: auto;
+   padding: 5px 32px;
+   font-size: 12px;
+   background-color: #649a58;
+border: 1px solid #649a58;
+}
+.img-slider-content h1{
+    font-size: 50px;
+    font-weight: bold;
+}
+.img-slider-content h3{
+    color: #3c3c3c;
+    font-size: 16px;
 }
