--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0px;
-    font-family: 'Fira Sans', sans-serif;
-}
+    font-family: 'PT Sans', sans-serif;
+   }
 
 .ul{
     margin: 0px;
@@ -10,7 +10,7 @@ body{
 
 .top-bar{
     height: 38px;
-    width: 100%;
+    width: 1246;
     background-image:url(../img/nav-bkg.jpg);
     text-decoration: none;
     color: #5e5e5e;
@@ -22,10 +22,14 @@ body{
     width: 80%;
     justify-content: space-between;
     padding: 10px;
- }
+    
+
+    }
 
 .left{
     display: flex;
+    
+
 }
 
 .Language a{
@@ -38,14 +42,14 @@ body{
     text-decoration: none;
     color: #808080;
 }
-
 .welcome p{
     margin: 0px;
 }
-
-.right{}
-
-.MyAccount a{   
+.right{
+    
+}
+.MyAccount a{
+    
     text-decoration: none;
     color: #808080;
 }
@@ -65,20 +69,18 @@ body{
     padding: 30px 0px;
     margin: 0px;
 }
-
 .nav{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 .nav ul{
     padding: 0px 50px;
 }
 
 .nav ul li{
-    display: inline-block; 
-}
+    display: inline-block;
+    }
 
 .nav ul li a{
     color: #808080;;
@@ -86,6 +88,7 @@ body{
     font-size: 16px;
     text-decoration: none;
     padding: 0px 15px;
+    
 }
 
  .search{
@@ -103,28 +106,26 @@ body{
 }
 
 #block-container{
-    background-image: url(../img/testimonials-bg.png);
+
     display: flex;
     display: inline-block;
     height: 400px;
     padding: 60px ;
     width: 90%;
+    
 }
-
 .image-container{
     margin: auto;
     width: 70%;
     display:flex;
-    padding top: 70px;
-    padding bottom: 140px;
+    padding-top: 70px;
+    padding-bottom: 140px;
     
 }
-
 .image{
     padding-right: 90px;
-    display: flex;
+display: flex;
 }
-
 .image-container a{
     text-decoration: none;
     color: black;
@@ -135,66 +136,58 @@ body{
 .img{
     height: 400px;
     padding: 20px 0px;
+    
+    
 }
-
 .cate-title a{
-    background: #649a58;
-    color: #ffffff;
-    padding: 15px 18px;
     font-size: 14px;
-
     line-height: 22px;
     font-weight: 600;
     letter-spacing: 0;
     text-transform: uppercase;
     word-wrap: break-word;
     max-width: 45px;
-   
-
-
+    color: #ffffff;
+    padding: 15px 18px;
+    background: #649a58;
 }
+
+
+
 #top-products{
     width: 100%;
     height: 130vh;
     text-align: center;
     background-image: url('../img/producttab-bkg.png');
-    
 } 
-
 .top-products{
     width: 100%;
-
 }
-
 .products h1{
     font-size: 36px;
     margin-bottom: 45px;
 }
-
 .buttons ul{
     display: flex;
-    display: inline-block;
     list-style: none;
     justify-content: center;
     align-items: center;
-    
 }
-.button a{
+
+.buttons a{
+    
     display: inline block;
     text-decoration: none;
-    color: white;
+    color: rgb(255, 255, 255);
     border: 1px solid #649a58;
     background-color: #649a58;
     margin: 0px 10px;
     padding: 10px 25px;
     transition: all .5s ease ;
-    
 }
-
 .buttons a:hover{
     background-color: #808080;
 }
-
 .row{
     height: 400px;
     display: inline-block;
@@ -202,6 +195,7 @@ body{
 }
 .col-12{
     display: inline-block;
+    
 }
 
 .project-items{
