--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -259,3 +259,22 @@ border: 1px solid #649a58;
     color: #3c3c3c;
     font-size: 16px;
 }
+
+.f-products{
+    width: 100%;
+    height: 70px;
+    text-align: center;
+    font-size: 36px;
+    margin-bottom: 45px;
+    background-image: url(../img/producttab-bkg.png);
+}
+
+.fromourblog{
+    width: 100%;
+    height: 70px;
+    text-align: center;
+    font-size: 36px;
+    margin-bottom: 45px;
+     
+}
+
