--- a/Foundation51/Week06-Day02/css/products.css
+++ b/Foundation51/Week06-Day02/css/products.css
@@ -1,37 +1,57 @@
 .product{
-position: relative;
-height: 450px;
-border: 3px solid lightgray;
-margin: 0px 10px;
-
+    position: relative;
+    height: 450px;
+    border: 3px solid lightgray;
+    margin-bottom: 20px;
 }
+
 .photos,.info,.social{
     position: absolute;
 }
 
 .photos{
     height: 350px;
+    width: 100%;
+    position: relative;
 }
+
 .photos img{
     height: 350px;
     width: 100%;
     object-fit: cover;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    transition: all .3s ease;
 }
+
 .info{
     width: 100%;
     padding: 10pc;
     box-sizing: border-box;
 }
+
 .stars{
     width: 100%;
     display: flex;
     justify-content: center;
     font-size: .8em;
     letter-spacing: 5px;
+    color: lightgray;
 }
-.stars i:nth-child(n+2) {
+
+.stars i:nth-child(n+3) {
     color: orange;
 }
-.social{
 
+.social{
+    right: 0px;
+    top: 250px;
+    display: flex;
+    flex-direction: column;
 }
+.social i{
+    padding: 10px;
+    background: rgb(72, 192, 72);
+    color: white;
+    margin: 3px;
