--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -1,6 +1,6 @@
-[20:05, 5/1/2021] Jalə Xanım Pragmatich: body{
+body{
     margin: 0px;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Fira Sans', sans-serif;
    }
 
 .ul{
@@ -32,12 +32,12 @@
 
 }
 
-.Language a{
+.language a{
     text-decoration: none;
     color: #808080;
 }
 
- .Currency a{
+ .currency a{
     padding: 0px 20px;
     text-decoration: none;
     color: #808080;
@@ -48,7 +48,7 @@
 .right{
     
 }
-.MyAccount a{
+.myAccount a{
     
     text-decoration: none;
     color: #808080;
@@ -92,8 +92,21 @@
 }
 
  .search{
-    color: black;
+    color: rgb(15, 15, 15);
 }
+.search a:hover{
+    background-color: #649a58;
+}
+
+.basket{
+    margin: 20px;
+    font-size: 30px;
+    background-color: whitesmoke;
+}
+.basket a:hover{
+    color: #649a58;
+}
+
 #slide{}
 .slide{
     height: 400px;
@@ -216,15 +229,77 @@ margin: 0;
 }
 .project-item img{}
 .project-item i{
-color: #F1AF00;
+color: #ffba00;
 }
 
 .project-item p{
 color: #649a58;
 }
-.project-item span{
-    
+.project-item span{}
+
+.social {
+    right: 17px;
+    top: 134px;
+    display: flex;
+    flex-direction: column;
+    margin-right: -40px;
+    transition: all .3s ease;
+    z-index: 4
 }
+
+.social>span {
+    margin: 22px;
+}
+
+.social i:after {
+    content: 'Wishlist',
+}
+
+.social-item {
+    position: relative
+}
+
+.social-item span {
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    padding: 10px 15px;
+    background: #333;
+    color: white;
+    opacity: 0;
+    transition: all .3s ease;
+}
+
+.social-item span:after {
+    content: '';
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    top: 11px;
+    right: -10px;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid #333;
+    border-right: 5px solid transparent;
+}
+
+.social-item i {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    box-sizing: border-box;
+    background:  #649a58;;
+    color: white;
+}
+
+.social-item:hover span {
+    opacity: 1;
+} 
+
+
 
 .img-slider{
     height: auto;
@@ -284,7 +359,7 @@ border: 1px solid #649a58;
 .blog-item img{
     height:257px ;
     width: 430px;
-    object-fit: cove;
+    object-fit: cover;
 }
 .brend-images{
     padding: 70px 0px;
@@ -299,37 +374,43 @@ border: 1px solid #649a58;
 }
 
 .footer-container{
+    height: 400px;
+    
     /*background-image: url(../img/footer-pattan-left.png);
     background-image: url(../img/footer-pattan-right.png);*/
 }
-
+.h2{
+    color: #000000;
+}
 
 .footer-blok ul{
     list-style: none;
     padding: 0;
-    padding-right: 30px;
+    padding-right: 100px;
+   
 }
 .footer-blok ul li{
-    margin: 10px 0px;
+    margin: 30px 0px;
+    color: #a4a4a4;
 }
 
 .extra-link ul{
     list-style: none;
     padding: 0;
-    padding-right: 30px;
+    padding-right: 100px;
 }
 
 .extra-link ul li{
-    margin: 10px 0px;
+    margin: 30px 0px;
 }
 
 .my-account ul{
     list-style: none;
     padding: 0;
-    padding-right: 30px;
+    padding-right: 50px;
 }
-..my-account ul li{
-    margin: 10px 0px;
+.my-account ul li{
+    margin: 30px 0px;
 }
 
 .contact ul{
@@ -338,5 +419,14 @@ border: 1px solid #649a58;
     padding-right: 30px;
 }
 .contact ul li{
-    margin: 10px 0px;
+    margin: 30px 0px;
+}
+
+.block-social ul li{
+    display: inline-block;
+    color: #a4a4a4;
+    padding: 10px;
+    font-size: 20px;
+    height: 0px;
+    margin: 0px;
 }
