--- a/Project/css/page.css
+++ b/Project/css/page.css
@@ -10,7 +10,7 @@ body{
 
 .top-bar{
     height: 38px;
-    width: 100%;
+    width: 1246;
     background-image:url(../img/nav-bkg.jpg);
     text-decoration: none;
     color: #5e5e5e;
@@ -22,14 +22,10 @@ body{
     width: 80%;
     justify-content: space-between;
     padding: 10px;
-    
-
-    }
+}
 
 .left{
     display: flex;
-    
-
 }
 
 .language a{
@@ -41,7 +37,7 @@ body{
     color: #649a58;
 }
 
-.currency a{
+ .currency a{
     padding: 0px 20px;
     text-decoration: none;
     color: #808080;
@@ -50,12 +46,20 @@ body{
 .currency a:hover{
     color: #649a58;
 }
+
 .welcome p{
     margin: 0px;
+    font-size: 11px;
+    letter-spacing: 0.3px;
+    line-height: 16px;
 }
+
 .right{
-    
+    font-size: 13px;
+    letter-spacing: 0.3px;
+    line-height: 16px;
 }
+
 .myAccount a{
     
     text-decoration: none;
@@ -75,34 +79,34 @@ body{
 
 .navbar{
     display: flex;
-    
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     padding: 30px 0px;
     margin: 0px;
 }
+
 .nav{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 200px;
 }
+
 .nav ul{
     padding: 0px 50px;
 }
 
 .nav ul li{
     display: inline-block;
-    }
+}
 
 .nav ul li a{
-    color: #243238;
+    color: #808080;;
     margin-right:30px ;
-    font-size: 18px;
-    line-height: 1.5;
+    font-size: 14px;
+    line-height: 1.5px;
     text-decoration: none;
     padding: 0px 15px;
-    
 }
 
 .nav ul li a:hover{
@@ -112,10 +116,10 @@ body{
  .search a{
     color: #243238;
     font-size: 20px;
-    
 }
+
 .search a:hover{
-    background-color: #649a58;
+    color: #649a58;
 }
 
 .basket a{
@@ -156,7 +160,6 @@ body{
 .home ul li a{
     color: #262626;
     text-decoration: none;
-  
 }
 
 .home ul li a:hover{
