--- a/Project/css/page.css
+++ b/Project/css/page.css
@@ -166,3 +166,71 @@ body{
     color: #649a58;
     text-decoration: underline;
 }
+
+
+
+
+.container{
+    
+    height: 1000px;
+    width: 100%;
+   
+}
+.row{
+    
+    height: 700px;
+    width: 100%;
+    display: flex;
+    list-style: none;
+}
+.col3{
+    border: 2px solid grey;
+    height: 600px;
+    width: 20%;
+    list-style: none;
+   
+}
+.col3 ul li a{
+    text-decoration: none;
+    list-style: none;
+    color: #243238;
+}
+
+.col9{
+    
+    height: 500px;
+    width: 80%;
+    padding: 0px 70px 0px 30px
+}
+.box-heading{
+    
+    height: 300px;
+    list-style: none;
+    
+}
+..box-heading ul li a{
+    text-decoration: none;
+    list-style: none;
+}
+.box{
+    
+    height: 600px;
+}
+.box ul li{
+list-style: none;
+display: flex;
+display: inline-block;
+}
+.box ul li a{
+    color: black;
+    text-decoration: none;
+}
+.box-ht{
+   
+    height: 10px;
+    width: 20%;
+}
+.btn{
+display: flex;
+display: inline-block;
+}
