--- a/Project/css/page.css
+++ b/Project/css/page.css
@@ -11,7 +11,7 @@ body{
     text-decoration: none;
     list-style: none;
 }
-.ol{
+.ol li{
     text-decoration: none;
 }
 
@@ -267,6 +267,13 @@ display: inline-block;
    list-style: none;
    color: #243238;
 }
+
+.box-ht{
+    height: 500px;
+    width: 100%;
+    display: flex;
+    display: inline-block;
+ }
 .refine a{
    color: #649a58;
    margin-left: 200px;
@@ -280,94 +287,172 @@ display: inline-block;
    height: 550px;
    width: 80%;
    display: flex;
+   margin: 20px;
 }
 
-.box-ht{
-   height: 500px;
-   width: 100%;
-   display: flex;
-   display: inline-block;
+.product1 {
+    position: relative;
+    height: 394px;
+    overflow: hidden;
+    margin-bottom: 20px;
+    width: 254px;
+    margin-right: 25px;
 }
 
-.product {
-position: relative;
-height: 394px;
-overflow: hidden;
-margin-bottom: 20px;
-width: 254px;
-margin-right: 25px;
-}
-
-.product:hover .social {
-margin-right: 0px;
+.product1:hover .social {
+    margin-right: 0px;
 }
 
 .photo,
 .info,
 .social {
-position: absolute;
+    position: absolute;
 }
 
 .photos {
-height: 350px;
-width: 100%;
-position: relative;
+    height: 350px;
+    width: 100%;
+    position: relative;
 }
 
 .photos img:nth-child(1) {
-opacity: 1;
-z-index: 1
+    opacity: 1;
+    z-index: 1
 }
 
 .photos img:nth-child(2) {
-opacity: 0;
-z-index: 2;
+    opacity: 0;
+    z-index: 2;
 }
 
 .photos:hover img:nth-child(1) {
-opacity: 0;
-z-index: 1
+    opacity: 0;
+    z-index: 1
 }
 
 .photos:hover img:nth-child(2) {
-opacity: 1;
-z-index: 2
+    opacity: 1;
+    z-index: 2
 }
 
 .photos img {
-height: 350px;
-width: 100%;
-object-fit: cover;
-position: absolute;
-top: 0px;
-left: 0px;
-transition: all .3s ease;
+    height: 350px;
+    width: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    transition: all .3s ease;
+}
+
+.social {
+    margin-top: 58px;
+    right: 17px;
+    top: 134px;
+    display: flex;
+    flex-direction: column;
+    margin-right: -40px;
+    transition: all .3s ease;
+    z-index: 4
+   
+}
+
+.social>span {
+    margin: 22px;
+}
+
+.social i:after {
+    content: 'Wishlist',
+}
+
+.social-item {
+    position: relative
+}
+
+.social-item span {
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    padding: 10px 15px;
+    background: rgba(0, 0, 0, .8);
+    color: white;
+    opacity: 0;
+    transition: all .3s ease;
+    width: 120px;
+}
+
+.social-item span:after {
+    content: '';
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    top: 11px;
+    right: -10px;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid rgba(0, 0, 0, .8);
+    border-right: 5px solid transparent;
+}
+
+.social-item i {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    box-sizing: border-box;
+    background: #649a58;
+    color: white;
+}
+
+.social-item:hover span {
+    opacity: 1;
 }
 
 
-.product-{
-border: 2px solid gold;
-width: 50%;
+.product{
+width: 80%;
+display: flex;
 display: inline-block;
 text-decoration: none;
 color: #a4a4a4;
+margin-right: 50px;
+padding: 10px 15px 0;
+background: #fff;
 }
 
 .stars {
-display: flex;
-font-size: .8em;
-letter-spacing: 5px;
-color: #ffba00;
+    width: 100%;
+    display: flex;
+    font-size: 13px;
+    letter-spacing: 1px;
+    color: lightgray;
+    margin: 15px 0;
+    margin: 0 0 15px;
+    display: inline-block;
+    width: 100%;
+}
+
+.stars i:nth-child(n+1) {
+    color: #ffba00;
 }
 .caption {}
 
 .caption h4 a{
 color: #a4a4a4;
-font-size: 14px;
+font-size: 20px;
 line-height: 18px;
 text-decoration: none;
 text-align: left;
-letter-spacing: .3px;
+letter-spacing: 1px;
+
+margin-bottom: 8px;
+    display: inline-block;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #dfdfdf;
+    text-transform: capitalize;
+    width: 100%;
 }
 .caption h4 a:hover{
 color: #649a58;
@@ -381,6 +466,7 @@ font-size: 16px;
 line-height: 22px;
 font-weight: 600;
 letter-spacing: 0.3px;
+margin-bottom: 15px;
 }
 .new{
 color: #000000;
@@ -432,9 +518,8 @@ width: 20%;
 height: 400px;
 }
 .specials{
-border: 2px solid grey;
-width: 20%;
-height: 500px;
+    width: 100%;
+    height: 45px;
 }
 .product-items{
 display: flex;
