--- a/Project/css/page.css
+++ b/Project/css/page.css
@@ -1,4 +1,6 @@
-*{list-style:none ;}
+*{list-style:none ;
+text-decoration: none;
+}
 
 body{
     margin: 0px;
@@ -10,9 +12,6 @@ body{
     padding: 0px;
     text-decoration: none;
     list-style: none;
-}
-.ol li{
-    text-decoration: none;
 }
 
 .top-bar{
@@ -137,17 +136,6 @@ body{
 .basket a:hover{
     color: #649a58;
 }
-.button a{
-    color: #ffffff;
-    background: #649a58;
-    line-height: 17px;
-    width: 32px;
-    height: 32px;
-    font-size: 16px;
-    padding: 0px 5px;
-    text-transform: lowercase;
-    display: block;
-}
 
 .fashion{
     height: 100px;
@@ -186,7 +174,7 @@ body{
 }
 
 .container{
-    height: 2000px;
+    height: 1500px;
     width: 100%;
  }
 
@@ -196,6 +184,7 @@ body{
     display: flex;
     list-style: none;
     text-decoration: none;
+
 }
 
 .col3{
@@ -204,11 +193,12 @@ body{
     width: 20%;
     list-style: none;
    text-decoration: none;
+   margin: 0px 0px 25px;
 }
 .col3 ul li a{
     text-decoration: none;
-    list-style: none;
     color: #243238;
+
 }
 
 .col9{
@@ -218,9 +208,11 @@ body{
     padding: 0px 70px 0px 30px
 }
 .box-heading{
-    
+    color: #649a58;
     height: 300px;
     list-style: none;
+    padding: 15px;
+   
     
 }
 .box-heading ul li a{
@@ -509,8 +501,8 @@ border: 1px solid #649a58;
 }
 
 .button:hover{
-border: 1px solid black;
-background-color: black;
+border: 1px solid #000000;
+background-color: #000000;
 }
 
 .img{
@@ -525,3 +517,187 @@ height: 400px;
 display: flex;
 
 }
+
+.col-4{
+    border: 3px solid white;
+    height: 600px;
+    width: 20%;
+    list-style: none;
+}
+
+.wpage{
+   
+}
+
+.pages{
+    display: flex;
+    float: left;
+    padding: 0;
+    width: auto;
+   
+    margin: 30px 10px 10px 300px;
+}
+.left-page{
+    float: right;
+    margin: -30px 20px 10px 700px;
+}
+
+.btns {
+    background-color: #000000;
+    border: none;
+    color: #ffffff;
+    padding: 12px 16px;
+    font-size: 16px;
+    cursor: pointer;
+
+  }
+  ​
+  .btns:hover {
+      border: 1px solid #649a58;
+    background-color:#649a58;
+  }
+
+
+
+.footer-container{
+    height: 400px;
+    margin: 10px 50px ;
+    padding: 30px;
+    background-image: url(../img/footer-pattan-right.png);
+    background-repeat: no-repeat;
+    background-position: right top;
+    margin-right: 10px;
+}
+
+        background-image: url(../img/footer-pattan-left.png);
+    
+        background-image: url(../img/footer-pattan-right.png);
+
+
+.h2{
+    color: #000000;
+}
+.footer-blok{
+    margin-right: 90px;
+}
+.footer-blok ul{
+    list-style: none;
+    padding: 0;
+    padding-right: 20px;
+   
+}
+.footer-blok ul li{
+    margin: 30px 0px;
+    color: #a4a4a4;
+}
+.extra-link {
+    margin-right: 30px;
+}
+.extra-link ul{
+    list-style: none;
+    padding: 0;
+    padding-right: 100px;
+}
+
+.extra-link ul li{
+    margin: 30px 0px;
+    color: #a4a4a4;
+}
+.my-account {
+    margin-right: 90px;
+}
+.my-account ul{
+    list-style: none;
+    padding: 0;
+    padding-right: 50px;
+}
+.my-account ul li{
+    margin: 30px 0px;
+    color: #a4a4a4;
+}
+
+.contact ul{
+    list-style: none;
+    padding: 0;
+    padding-right: 30px;
+}
+.contact ul li{
+    margin: 30px 0px;
+    color: #a4a4a4;
+}
+
+.contact ul li i{
+padding: 0px 10px;
+color:  #649a58;
+}
+
+.block-social ul li{
+    display: inline-block;
+    color: #a4a4a4;
+    padding: 10px;
+    font-size: 20px;
+    height: 0px;
+    margin: 0px;
+}
+.block-social ul li i{
+    color:#a4a4a4 ;
+}
+.foot{
+    background: #f7f1db;
+    height: 50px;
+    display: flex;
+    font-size: 18px;
+    justify-content: flex-end;
+    
+}
+
+.kidpay{
+     height: 50px;
+     width: 70%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0px 20px;
+}
+
+.toys{
+    display: flex;
+    width: 50%;
+    justify-content: space-between;
+}
+
+.kidpay span{}
+
+.mail{
+    background: #f7f1db;
+    height: 50px;
+    width: 25%;
+   display: flex;
+}
+
+.mail input{
+    font-size: 12px;
+    letter-spacing: .6px;
+    font-weight: 400;
+    color: #262626;
+    padding:18px 0px;
+    width: 75%;
+    border: none;
+    height: 100%;
+    text-align: center;
+}
+
+.plane{
+    border: none;
+    height: 100%;
+    width: 10%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+}
+.plane :hover{
+    color: #649a58;
+}
+
