--- a/Project/css/page1.css
+++ b/Project/css/page1.css
@@ -238,9 +238,11 @@ body {
     color: #000;
 }
 
+.buttons {}
+
 .qty {
-    display: flex;
-    display: inline-block;
+    height: 150px;
+    width: 100%;
 }
 
 .button {
@@ -276,7 +278,16 @@ body {
     background-color: black;
 }
 
-.medya {}
+.medya {
+    border: none;
+}
+
+.hr {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid #eee;
+}
 
 .product1 {
     position: relative;
@@ -355,3 +366,38 @@ body {
 .social-item:hover span {
     opacity: 1;
 }
+
+.col-12 {}
+
+ul {
+    display: flex;
+    justify-content: center;
+}
+
+.col-12 ul li {
+    margin: 10px;
+}
+
+.col-12 ul li a {
+    color: #000000;
+    background-color: #f5f5f5;
+    margin: 0px 10px;
+    padding: 15px 50px;
+}
+
+.col-12 ul li a:hover {
+    background-color: #649a58;
+    color: white;
+}
+
+.tab-content {
+    border: 1px solid #ededed;
+    padding: 30px;
+    margin: 50px;
+    letter-spacing: 1px;
+    color: #808080;
+    font-size: 17px;
+    line-height: 26px;
+}
+
+.p {}
